[gd_scene load_steps=26 format=3 uid="uid://dqxghyt2f7oys"]

[ext_resource type="Script" path="res://scenes/options.gd" id="1_vlxc7"]
[ext_resource type="Texture2D" uid="uid://dxd05my8vhqoy" path="res://assets/genericBG.png" id="2_scx1b"]
[ext_resource type="FontFile" uid="uid://4lhe6j1fp84n" path="res://assets/8-bit-hud.ttf" id="3_2yr7o"]
[ext_resource type="AudioStream" uid="uid://dy3bs7xdlg4fb" path="res://assets/skogen14.mp3" id="4_gkdby"]
[ext_resource type="Texture2D" uid="uid://ctbprcicvx3on" path="res://assets/sound selector.png" id="5_o2dxs"]
[ext_resource type="Texture2D" uid="uid://bij8d568bifdy" path="res://assets/sound3.png" id="6_cjtno"]
[ext_resource type="Texture2D" uid="uid://cknyrkodetey4" path="res://assets/sound2.png" id="7_yq2gc"]
[ext_resource type="Texture2D" uid="uid://btltgrhvef64b" path="res://assets/sound1.png" id="8_5jnfd"]
[ext_resource type="Texture2D" uid="uid://bh33aotv1wnpu" path="res://assets/sound0.png" id="9_wp0q5"]
[ext_resource type="Texture2D" uid="uid://bv8hot3co54r8" path="res://assets/sound4.png" id="10_rndy0"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_dxp5f"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_p36nm"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_5yldy"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jg7p5"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_vpa20"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_4lk3e"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_okbe2"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_lm6bw"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_1s751"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_yo82a"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_m5o2n"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jhhsb"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_xeme0"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_6nd2r"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_u4wis"]

[node name="Options" type="Node2D"]
script = ExtResource("1_vlxc7")

[node name="GenericBg" type="Sprite2D" parent="."]
position = Vector2(89.9999, 68)
scale = Vector2(5.5875, 2.95)
texture = ExtResource("2_scx1b")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="controls" type="Button" parent="."]
offset_left = -444.0
offset_top = -181.0
offset_right = -256.0
offset_bottom = -146.0
theme_override_colors/font_hover_pressed_color = Color(0.494118, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.533333, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2yr7o")
theme_override_styles/focus = SubResource("StyleBoxLine_dxp5f")
theme_override_styles/disabled = SubResource("StyleBoxLine_p36nm")
theme_override_styles/hover_pressed = SubResource("StyleBoxLine_5yldy")
theme_override_styles/hover = SubResource("StyleBoxLine_jg7p5")
theme_override_styles/pressed = SubResource("StyleBoxLine_vpa20")
theme_override_styles/normal = SubResource("StyleBoxLine_4lk3e")
text = "controls"

[node name="Skogen14" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-1319, -32)
stream = ExtResource("4_gkdby")

[node name="Button" type="Button" parent="."]
offset_left = 354.0
offset_top = 211.0
offset_right = 517.0
offset_bottom = 271.0
theme_override_colors/font_hover_pressed_color = Color(0.556863, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.599057, 1.43189e-06, 4.33177e-07, 1)
theme_override_fonts/font = ExtResource("3_2yr7o")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxLine_okbe2")
theme_override_styles/disabled = SubResource("StyleBoxLine_lm6bw")
theme_override_styles/hover_pressed = SubResource("StyleBoxLine_1s751")
theme_override_styles/hover = SubResource("StyleBoxLine_yo82a")
theme_override_styles/pressed = SubResource("StyleBoxLine_m5o2n")
theme_override_styles/normal = SubResource("StyleBoxLine_jhhsb")
text = "back"

[node name="Label" type="Label" parent="."]
offset_left = -424.0
offset_top = -123.0
offset_right = -277.0
offset_bottom = -90.0
theme_override_colors/font_color = Color(0.837469, 0.837469, 0.837469, 1)
theme_override_fonts/font = ExtResource("3_2yr7o")
text = "sound"

[node name="HSlider" type="VSlider" parent="."]
offset_left = -429.0
offset_top = -59.0
offset_right = -340.0
offset_bottom = 16.0
theme_override_icons/grabber = ExtResource("5_o2dxs")
theme_override_icons/grabber_highlight = ExtResource("5_o2dxs")
theme_override_icons/grabber_disabled = ExtResource("5_o2dxs")
theme_override_styles/slider = SubResource("StyleBoxLine_xeme0")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_6nd2r")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_u4wis")
step = 2.0
value = 80.0
tick_count = 5
ticks_on_borders = true

[node name="Label2" type="Label" parent="."]
offset_left = -429.0
offset_top = -260.0
offset_right = -282.0
offset_bottom = -227.0
theme_override_colors/font_color = Color(0.837469, 0.837469, 0.837469, 1)
theme_override_fonts/font = ExtResource("3_2yr7o")
theme_override_font_sizes/font_size = 25
text = "OPTIONS"

[node name="muted" type="Sprite2D" parent="."]
position = Vector2(-204, 21)
texture = ExtResource("6_cjtno")

[node name="Sound1" type="Sprite2D" parent="."]
position = Vector2(-204, 21)
texture = ExtResource("7_yq2gc")

[node name="Sound2" type="Sprite2D" parent="."]
position = Vector2(-204, 21)
texture = ExtResource("8_5jnfd")

[node name="Sound3" type="Sprite2D" parent="."]
position = Vector2(-204, 21)
texture = ExtResource("9_wp0q5")

[node name="bomb" type="Sprite2D" parent="."]
position = Vector2(-257, -44)
scale = Vector2(0.484375, 0.46875)
texture = ExtResource("10_rndy0")

[node name="Label3" type="Label" parent="."]
offset_left = -214.0
offset_top = -46.0
offset_right = 7.0
offset_bottom = 1.0
theme_override_fonts/font = ExtResource("3_2yr7o")
text = "noise bomb!!!!"

[connection signal="pressed" from="controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
